spec/error_then_nested_no_parens.expected
Parse error: spec/error_then_nested_no_parens.kex:3:23: Expected 'else' after 'then', got then [then]
