spec/error_then_nested_no_parens.kex
# Nesting `then`/`else` without parens is not allowed.
main do
  let x = true then 1 then 2 else 3 else 4
  IO.printLine(x)
end
